<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/ll_info">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            />
    </LinearLayout>
    <LinearLayout
        android:paddingBottom="@dimen/padding_screen_td"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
            android:id="@+id/ll_editname_1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageButton
                android:onClick="Enable_p1"
                android:background="@android:color/transparent"
                android:layout_width="@dimen/title_image"
                android:layout_height="@dimen/title_image"
                android:src="@drawable/player_1"
                android:id="@+id/ib_lock1"
                android:layout_weight="0.2"/>
            <EditText
                android:textColor="@color/blue"
                android:id="@+id/ed_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="Player1"
                android:enabled="false"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_editname_1">
        <ImageButton
            android:background="@android:color/transparent"
            android:layout_width="@dimen/title_image"
            android:layout_height="@dimen/title_image"
            android:src="@drawable/player_2"
            android:id="@+id/ib_lock2"
            android:layout_weight="0.2"
            android:onClick="Enable_p2"/>
        <EditText
            android:textColor="@color/orange"
            android:id="@+id/ed_p2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="Player2"
            android:enabled="false"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>
         </LinearLayout>
        <Button

            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="@dimen/huge_btn_with"
            android:layout_height="@dimen/huge_btn_height"
            android:text="@string/start"
            android:onClick="Start"
            android:background="@drawable/btn_color"
            android:textSize="15sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_caption"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/caption"
        android:textSize="@dimen/huge_text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.05"
        android:src="@drawable/start2"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        />
</RelativeLayout>