<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.connect4.yechen.connect4.MainActivity">

    <RelativeLayout
        android:layout_marginTop="@dimen/padding_screen_td"
        android:id="@+id/rl_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/parent_size">
        <TextView
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/padding_screen_lr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p1"
            android:textSize="@dimen/title_text"
            android:id="@+id/tv_p1"/>
        <ImageView
            android:id="@+id/iv_p1"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/title_image"
            android:layout_height="@dimen/title_image"
            android:layout_marginLeft="@dimen/element_margin"
            android:layout_toRightOf="@id/tv_p1"
            android:src="@drawable/player_1"/>
        <TextView
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/padding_screen_lr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2"
            android:textSize="@dimen/title_text"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_p2"/>
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/iv_p2"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/title_image"
            android:layout_height="@dimen/title_image"
            android:layout_toLeftOf="@id/tv_p2"
            android:layout_marginRight="@dimen/element_margin"
            android:src="@drawable/player_2"/>
    </RelativeLayout>
    <LinearLayout
        android:background="@android:color/background_light"
        android:layout_below="@id/rl_hint"
        android:id="@+id/ll_result"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_screen_td">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player1 WIN !"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/tv_result"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_step"
            android:text="@string/step"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_marginTop="@dimen/padding_screen_td"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="@dimen/normal_btn_with"
                android:layout_height="@dimen/normal_btn_height"
                android:text="restart"
                android:onClick="Restart"
                android:background="@drawable/btn_color"
                android:textSize="@dimen/btn_text"
                android:layout_marginLeft="@dimen/element_margin"/>
            <Button
                android:layout_width="@dimen/normal_btn_with"
                android:layout_height="@dimen/normal_btn_height"
                android:text="rollback"
                android:background="@drawable/btn_color"
                android:textSize="@dimen/btn_text"
                android:layout_marginLeft="@dimen/element_margin"
                android:onClick="Rollback"/>
        </LinearLayout>
    </LinearLayout>
    <GridLayout

        android:layout_marginTop="@dimen/padding_screen_td"
        android:id = "@+id/gl_main"
        android:columnCount="7"
        android:rowCount="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

    </GridLayout>
</RelativeLayout>
